# MyProject

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CNAME  Makefile  README.md  configure  configure.sh  vcpkg.json
.github/workflows/: cmake.yml  jekyll-gh-pages.yml
docs/: Doxyfile.in  page1.dox
lua/: test.lua
markdown/: jetbrain.md
md/: banner.md
res/: ico.icns  sound1.mp3.mpeg  test.lua
scripts/: all  alldebug  clangd  cmake  debug  install  ninja  test
src/: main.cpp  main.h
src/Config/: MPConfig.h  MPConfig.h.cmake  MPConfig.h.in
src/Lib/ImGuiFileDialog/: ImGuiFileDialog.cpp
src/Sound/: MusicBuffer.h  OpenALErrorCheck.h  SoundBuffer.cpp  SoundBuffer.h  SoundDevice.cpp  SoundDevice.h  SoundEffectsLibrary.cpp  SoundSource.cpp  SoundSource.h
src/lua/: main.lua  test.lua
src/main/: main.cpp
src/main/Config/: MPConfig.h  MPConfig.h.cmake
src/main/Discord/: Discord.cpp  Discord.h
src/main/Graphics/: framebuffer.cpp  framebuffer.h  screenattr.h
src/main/Input/: processInput.cpp  processInput.h
src/main/Lang/: csi.cpp  csi.h
src/main/Lib/ImGuiFileDialog/: CustomImGuiFileDialogConfig.h  ImGuiFileDialog.cpp  ImGuiFileDialog.h
src/main/Lib/LibVLC/vlc/: libvlc_media.h
src/main/Lib/TextEditor/: TextEditor.h
src/main/Lua/: LuaInc.h
src/main/Python/: PyInc.h
src/main/Sound/: MusicBuffer.cpp  MusicBuffer.h  OpenALErrorCheck.h  SoundDevice.cpp  SoundDevice.h  SoundEffectsLibrary.cpp  SoundEffectsLibrary.h  SoundEffectsPlayer.cpp  SoundEffectsPlayer.h
src/main/Verbose/: verbose.cpp  verbose.h
tests/: CMakeLists.txt  Graphics.cpp
